# cg-sphere

./: .gitignore~  .gitmodules  CMakeLists.txt  CMakeLists.txt~
include/: CMakeLists.txt  CMakeLists.txt~  exampleclass.h  exampleclass.h~  has_intersection.h  has_intersection.h~  my_orientation.h  my_orientation.h~  point.h  point.h~  segment.h  segment.h~
src/: exampleclass.cpp  main.cpp  sphere_segments_intersection.cpp
tests/: CMakeLists.txt  CMakeLists.txt~  orientation_test.cpp  segments_intersection_test.cpp
visualisation/: CMakeLists.txt  CMakeLists.txt~  example.cpp  example.h  exampleclass.h  exampleclass.h~  main.cpp
